--- a/Video2X_on_Azure.ipynb
+++ b/Video2X_on_Azure.ipynb
@@ -120,8 +120,8 @@
       "cell_type": "code",
       "source": [
         "#run upscale encoder\r\n",
-        "!#python video2x/src/video2x.py -i video.mp4 -o video_4x.mp4 -d waifu2x_ncnn_vulkan -r 4.0\r\n",
-        "!python video2x/src/video2x.py -i video.mp4 -o video_4x.mp4 -d realsr_ncnn_vulkan -r 4.0"
+        "!python video2x/src/video2x.py -i video.mp4 -o video_4x.mp4 -d waifu2x_ncnn_vulkan -r 4.0\r\n",
+        "!#python video2x/src/video2x.py -i video.mp4 -o video_4x.mp4 -d realsr_ncnn_vulkan -r 4.0"
       ],
       "outputs": [],
       "execution_count": null,
