--- a/Video2X_on_Azure.ipynb
+++ b/Video2X_on_Azure.ipynb
@@ -11,7 +11,7 @@
         "!sudo apt -y install libmagic1 python3-yaml\r\n",
         "!sudo apt -y install libvulkan-dev\r\n",
         "!sudo apt -y autoremove\r\n",
-        "!pip install --user youtube-dl"
+        "!pip install --user youtube-dl  "
       ],
       "outputs": [],
       "execution_count": null,
@@ -120,8 +120,13 @@
       "cell_type": "code",
       "source": [
         "#run upscale encoder\r\n",
-        "!python video2x/src/video2x.py -i video.mp4 -o video_4x.mp4 -d waifu2x_ncnn_vulkan -r 4.0\r\n",
-        "!#python video2x/src/video2x.py -i video.mp4 -o video_4x.mp4 -d realsr_ncnn_vulkan -r 4.0"
+        "# waifu2x_ncnn_vulkan - GPU enabled for image scaling and noise reduction program for anime-style art\r\n",
+        "# srmd_ncnn_vulkan    - Super-Resolution Network for Multiple Degradations of image video\r\n",
+        "# realsr_ncnn_vulkan  - Real-World Super-Resolution of image video\r\n",
+        "\r\n",
+        "!#python video2x/src/video2x.py -i video.mp4 -o video_4x_waifu2x.mp4 -d waifu2x_ncnn_vulkan -r 4.0\r\n",
+        "!python video2x/src/video2x.py -i video.mp4 -o video_4x_srmd.mp4 -d srmd_ncnn_vulkan -r 4.0\r\n",
+        "!python video2x/src/video2x.py -i video.mp4 -o video_4x_realsr.mp4 -d realsr_ncnn_vulkan -r 4.0"
       ],
       "outputs": [],
       "execution_count": null,
@@ -134,6 +139,9 @@
           "transient": {
             "deleting": false
           }
+        },
+        "gather": {
+          "logged": 1634192072608
         }
       }
     }
