--- a/Video2X_on_Azure.ipynb
+++ b/Video2X_on_Azure.ipynb
@@ -121,12 +121,15 @@
       "source": [
         "#run upscale encoder\r\n",
         "# waifu2x_ncnn_vulkan - GPU enabled for image scaling and noise reduction program for anime-style art\r\n",
+        "#                         https://en.wikipedia.org/wiki/Waifu2x\r\n",
         "# srmd_ncnn_vulkan    - Super-Resolution Network for Multiple Degradations of image video\r\n",
+        "#                         https://github.com/cszn/SRMD\r\n",
         "# realsr_ncnn_vulkan  - Real-World Super-Resolution of image video\r\n",
+        "#                         https://github.com/nihui/realsr-ncnn-vulkan\r\n",
         "\r\n",
-        "!python video2x/src/video2x.py -i video.mp4 -o video_4x_waifu2x.mp4 -d waifu2x_ncnn_vulkan -r 4.0\r\n",
-        "!#python video2x/src/video2x.py -i video.mp4 -o video_4x_srmd.mp4 -d srmd_ncnn_vulkan -r 4.0\r\n",
-        "!#python video2x/src/video2x.py -i video.mp4 -o video_4x_realsr.mp4 -d realsr_ncnn_vulkan -r 4.0"
+        "!#python video2x/src/video2x.py -i video.mp4 -o video_4x_waifu2x.mp4 -d waifu2x_ncnn_vulkan -r 4.0\r\n",
+        "!python video2x/src/video2x.py -i video.mp4 -o video_4x_srmd.mp4 -d srmd_ncnn_vulkan -r 4.0\r\n",
+        "!python video2x/src/video2x.py -i video.mp4 -o video_4x_realsr.mp4 -d realsr_ncnn_vulkan -r 4.0"
       ],
       "outputs": [],
       "execution_count": null,
