--- a/Video2X_on_Azure.ipynb
+++ b/Video2X_on_Azure.ipynb
@@ -127,9 +127,9 @@
         "# realsr_ncnn_vulkan  - Real-World Super-Resolution of image video\r\n",
         "#                         https://github.com/nihui/realsr-ncnn-vulkan\r\n",
         "\r\n",
-        "!#python video2x/src/video2x.py -i video.mp4 -o video_4x_waifu2x.mp4 -d waifu2x_ncnn_vulkan -r 4.0\r\n",
-        "!python video2x/src/video2x.py -i video.mp4 -o video_4x_srmd.mp4 -d srmd_ncnn_vulkan -r 4.0\r\n",
-        "!python video2x/src/video2x.py -i video.mp4 -o video_4x_realsr.mp4 -d realsr_ncnn_vulkan -r 4.0"
+        "!python video2x/src/video2x.py -i video.mp4 -o video_4x_waifu2x.mp4 -d waifu2x_ncnn_vulkan -r 4.0\r\n",
+        "!#python video2x/src/video2x.py -i video.mp4 -o video_4x_srmd.mp4 -d srmd_ncnn_vulkan -r 4.0\r\n",
+        "!#python video2x/src/video2x.py -i video.mp4 -o video_4x_realsr.mp4 -d realsr_ncnn_vulkan -r 4.0"
       ],
       "outputs": [],
       "execution_count": null,
